# mushapp

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  mushapp.pro  path.env
android/: AndroidManifest.xml
i18n/: CMakeLists.txt  MushApp_en.ts  MushApp_it.ts  update_ts.bat
packaging/: CMakeLists.txt
qtci/recipes/: qt-5.9.1-android-24
src/: CMakeLists.txt  gdrivewrapper.cpp  gdrivewrapper.h  ijsonimportexport.h  main.cpp  pdfexport.cpp  pdfexport.h  sqlcharactermodel.cpp  sqlcharactermodel.h
src/googleapps/: abstractgoogleapps.cpp  abstractgoogleapps.h  googleapps_global.h  googlecalendar.h  googledrive.h  googleoauth2.cpp  googleoauth2.h
src/qml/: CanvasCharacterSheet.qml  CharacterArmorPage.qml  CharacterAuraPage.qml  CharacterCreationPage.qml  CharacterInfoPage.qml  CharacterItemsPage.qml  CharacterMainPage.qml  CharacterMoveListPage.qml  CharacterMovesPage.qml  CharacterSheetItem.qml  ExpDetails.qml  FlaggablePicker.qml  FlaggableValue.qml  GameBoard.qml  HyperMainPage.qml  MoveCreationPage.qml  MoveMainPage.qml  MushaDynPage.qml  Page1.qml  PageHeader.qml  RoundPicker10.qml  RoundPicker5.qml  RoundPicker6.qml  RoundPicker7.qml  Style.qml  SymbolList.qml  SymbolSelector.qml  ValuePicker.qml  WebCharacterSheet.qml  client_id.json  main.qml  qml.qrc
src/qml/business/: dal.js  exp.js  moves.js
src/qml/components/: MyComboBox.qml  MyDelayButton.qml  MyDelayDeleteButton.qml  MySpinBox.qml  MySwipableDelegate.qml  MySwitch.qml  ParallaxView.qml
src/qml/fa/: TextIcon.qml
src/qml/i18n/: MushApp_en.qm  MushApp_it.qm
src/qml/img/: img.qrc
src/qml/models/: CharacterModel.qml
